Major widget modifications 1) Using new smiley icons. 2) Added proper spacing. 3) Changed smiley rating logic. 4) Added link to user's public profile page. 5) Added constraint to ensure only first two lines are shown, followed by the 'more' link.

--- a/Source/SSWeb/src/main/webapp/resources/css/style-common.css
+++ b/Source/SSWeb/src/main/webapp/resources/css/style-common.css
@@ -7614,3 +7614,31 @@ label.url-change-input-label {
 .v-tbl-wid{
 	width : 4%;
 }
+
+.review-widget{
+   display: inline;
+   overflow: hidden;
+   text-overflow: ellipsis;
+   display: -webkit-box;
+   line-height: 24px;     /* fallback */
+   max-height: 48px;      /* fallback */
+   -webkit-line-clamp: 2; /* number of lines to show */
+   -webkit-box-orient: vertical;
+}
+
+.review-widget a {
+    position: absolute;
+}
+
+.widget-review-score {
+	margin-left: 8px;
+	line-height: 38px;
+}
+
+.widget-survey-btn {
+	margin-left: 25px;
+}
+
+.widget-review-block {
+	margin-top: 10px;
+}
